--- a/pom.xml
+++ b/pom.xml
@@ -39,6 +39,12 @@
             <version>1.18.28</version>
         </dependency>
 
+        <dependency>
+            <groupId>org.json</groupId>
+            <artifactId>json</artifactId>
+            <version>20220924</version>
+        </dependency>
+
     </dependencies>
 
 </project>
